codegen/ui_tests/export_mod_path_attr.stderr
error: expecting attribute name
  --> ui_tests/export_mod_path_attr.rs:11:11
   |
11 | #[rhai_fn(rhai::name = "thing")]
   |           ^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `test_mod`
  --> ui_tests/export_mod_path_attr.rs:22:8
   |
22 |     if test_mod::test_fn(n) {
   |        ^^^^^^^^ use of unresolved module or unlinked crate `test_mod`
   |
   = help: if you wanted to use a crate named `test_mod`, use `cargo add test_mod` to add it to your `Cargo.toml`
